--- a/src/css/node.css
+++ b/src/css/node.css
@@ -14,3 +14,11 @@
 .end {
   background-color: black;
 }
+
+.visited {
+  background-color: blue;
+}
+
+.shortest-path {
+  background-color: pink;
+}
