--- a/src/css/node.css
+++ b/src/css/node.css
@@ -1,25 +1,122 @@
+/* color scheme:
+Blue topaz: #67AECA, rgb(103,174,202)
+Amethyst: #675682, rgb(103,86,130)
+Jewel: #5F0F4E, rgb(95,15,78)
+Rose: #E52A6f, rgb(229,42,111) 
+Yellowish: #D9E254, rgb(217,226,84) */
+
+/* old color scheme:
+border: rgba(181, 96, 202, 0.4)
+begin: rgba(0, 0, 66, 0.75)
+50%: rgba(179, 53, 238, 0.75)
+75%: rgba(255, 82, 218, 0.75)
+100%: rgba(227, 117, 255, 0.75) */
+
 .node {
   width: 1.67vw;
   height: 1.67vw;
 }
 
 .default {
-  border: 1px solid #c4a7d7;
+  border: 1px solid rgba(177, 109, 216, 0.507);
 }
 
-.start {
-  background-color: yellow;
+#start {
+  display: flex;
+  align-items: center;
+  margin: auto;
+  font-size: 1.4vw;
+  height: 100%;
+  width: 100%;
+}
+
+#end {
+  display: flex;
+  align-items: center;
+  margin: auto;
+  font-size: 1.4vw;
+  height: 100%;
+  width: 100%;
+}
+/* .start {
+  background-color: rgb(238, 248, 94);
 }
 
 .end {
   background-color: black;
-}
+} */
 
-.visited {
+/* .visited {
   background-color: #c4a7d7;
   border: 1px solid white;
 }
 
 .shortest-path {
   background-color: yellow;
+} */
+
+.visited {
+  animation-name: visitedAnimation;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: forwards;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes visitedAnimation {
+  0% {
+    transform: scale(0.4);
+    background-color: rgb(0, 0, 0);
+    border-radius: 100%;
+    border: 1px solid rgba(177, 109, 216, 0.507);
+  }
+
+  40% {
+    background-color: rgb(140, 0, 255);
+  }
+
+  70% {
+    transform: scale(1.2);
+    background-color: rgb(213, 42, 229);
+  }
+
+  100% {
+    transform: scale(1);
+    background-color: rgb(195, 120, 238);
+    border: 1px solid white;
+  }
+}
+
+.shortest-path {
+  animation-name: shortestPath;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+
+@keyframes shortestPath {
+  0% {
+    transform: scale(0.2);
+    border-radius: 50%;
+    background-color: rgba(217, 226, 84, 40);
+  }
+
+  25% {
+    transform: scale(0.8);
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+    background-color: rgba(217, 226, 84, 75);
+  }
 }
