--- a/src/css/infoMenu.css
+++ b/src/css/infoMenu.css
@@ -1,5 +1,5 @@
 .info-menu {
-  margin: 1.5vw;
+  margin: 1.2vw;
 }
 
 .legend {
@@ -51,6 +51,13 @@
   border-top: 1px solid rgba(177, 109, 216, 0.507);
   margin: auto;
 }
+
+.content-separator-2 {
+  width: 85%;
+  border-top: 1px solid rgba(177, 109, 216, 0.507);
+  margin: auto;
+}
+
 .list-item {
   margin: 5px;
 }
